--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -29,7 +29,7 @@
                         <a href="#errata" class="tab errata-tab"><span>Errata</span></a>
                     </if>
                 </div>
-                <p class="blurb" data-html="description" skip="true"></p>
+                <div class="blurb" data-html="description" skip="true"></div>
                 <div>
                     <if condition="model.topSenior.length">
                         <div id="senior-top-authors">
