--- a/src/app/components/quotes/quotes.scss
+++ b/src/app/components/quotes/quotes.scss
@@ -1,13 +1,6 @@
-@import 'variables';
-@import 'mixins';
+@import 'mixins/triangle';
+@import '../../node_modules/pattern-library/core/pattern-library/headers';
 
-$phone-up: #{breakpoints(phone) + 1};
-
-@mixin desktop {
-    @media (min-width: 1000px) {
-        @content;
-    }
-}
 
 .quotes {
     align-items: stretch;
@@ -19,22 +12,31 @@ $phone-up: #{breakpoints(phone) + 1};
     position: relative;
     width: 100%;
 
-    @include desktop {
+    @include wider-than($tablet-max) {
         flex-flow: row nowrap;
         padding: 8rem 0;
     }
 
     .quote-bucket {
-        background-color: color(neutral-lightest);
+        background-color: ui-color(white);
         display: flex;
         flex: 0 1 100%;
         flex-flow: column nowrap;
         margin: 0.75rem 1.5rem;
         min-height: 20rem;
 
-        @include desktop {
+        @include wider-than($tablet-max) {
             margin: 0.75rem 1.5rem;
             min-width: 31rem;
+        }
+
+        @include wider-than($phone-max) {
+            flex-flow: row wrap;
+
+            div:first-child:nth-last-child(2),
+            div:first-child:nth-last-child(2) ~ div {
+                max-width: 50%; // IE fix
+            }
         }
 
         &:last-child {
@@ -42,16 +44,7 @@ $phone-up: #{breakpoints(phone) + 1};
         }
 
         .cyan {
-            background-color: color(cyan);
-        }
-
-        @media (min-width: $phone-up) {
-            flex-flow: row wrap;
-
-            div:first-child:nth-last-child(2),
-            div:first-child:nth-last-child(2) ~ div {
-                max-width: 50%; // IE fix
-            }
+            background-color: os-color(light-blue);
         }
 
         &.right {
@@ -76,7 +69,7 @@ $phone-up: #{breakpoints(phone) + 1};
                     @include triangle(
                         $direction: left,
                         $position: top calc(50% - 2.4rem) left -2.4rem,
-                        $color: color(neutral-lightest),
+                        $color: ui-color(white),
                         $size: 2.4rem
                     );
                 }
@@ -97,15 +90,15 @@ $phone-up: #{breakpoints(phone) + 1};
                     @include triangle(
                         $direction: top,
                         $position: left calc(50% - 2.4rem) top -1rem,
-                        $color: color(neutral-lightest),
+                        $color: ui-color(white),
                         $size: 2.4rem
                     );
 
-                    @media (min-width: $phone-up) {
+                    @include wider-than($phone-max) {
                         @include triangle(
                             $direction: left,
                             $position: top 50% left -4.4rem,
-                            $color: color(neutral-lightest),
+                            $color: ui-color(white),
                             $size: 2.4rem
                         );
                     }
@@ -114,28 +107,21 @@ $phone-up: #{breakpoints(phone) + 1};
         }
 
         &.full {
-            background-color: color(orange);
-            color: color(neutral-lightest);
+            background-color: os-color(orange);
+            color: text-color(white);
             font-weight: 400;
 
             &:nth-child(odd) {
-                background-color: color(cyan);
+                background-color: os-color(light-blue);
             }
 
             blockquote {
-                @include constrained-variable-text(2.2, 0.2);
+                font-size: 130%;
 
                 p {
                     margin: -0.6rem 0 0;
                     padding: 0 4rem 2rem 1rem;
                     text-indent: -1rem;
-                }
-
-                .attribution {
-                    @include constrained-variable-text(1.8, 0.2);
-
-                    font-weight: 300;
-                    line-height: 1.3;
                 }
             }
         }
@@ -143,7 +129,7 @@ $phone-up: #{breakpoints(phone) + 1};
 
     &.boxes-2 {
         > .quote-bucket {
-            @include desktop {
+            @include wider-than($tablet-max) {
                 flex-basis: calc(50% - 1.5rem);
             }
         }
@@ -151,7 +137,7 @@ $phone-up: #{breakpoints(phone) + 1};
 
     &.boxes-3 {
         > .quote-bucket {
-            @include desktop {
+            @include wider-than($tablet-max) {
                 flex-basis: 33.33%;
                 margin: 0 1.5rem;
             }
@@ -167,7 +153,7 @@ $phone-up: #{breakpoints(phone) + 1};
         height: 20rem;
         width: 100%;
 
-        @media (min-width: $phone-up) {
+        @include wider-than($phone-max) {
             flex: 1 1 50%;
             height: auto;
             width: auto;
@@ -183,7 +169,7 @@ $phone-up: #{breakpoints(phone) + 1};
         padding: 2rem;
         position: relative;
 
-        @media (min-width: $phone-up) {
+        @include wider-than($phone-max) {
             flex: 1 1 50%;
         }
 
@@ -200,7 +186,7 @@ $phone-up: #{breakpoints(phone) + 1};
         .overlay {
             display: none;
 
-            @media (min-width: $phone-up) {
+            @include wider-than($phone-max) {
                 bottom: 0;
                 display: block;
                 height: calc(18% + 5rem);
