--- a/src/app/pages/technology/technology.scss
+++ b/src/app/pages/technology/technology.scss
@@ -20,12 +20,12 @@
     }
 
     .btn {
-        font-size: 1.4rem;
         padding: 1rem 2rem;
     }
 
     .outlined {
         border: 0.15rem solid rgba(ui-color(white), 0.5);
+        border-radius: 0.2rem;
     }
     // scss-lint:disable IdSelector
 
@@ -44,10 +44,8 @@
         }
 
         h1 {
-            font-size: 6rem;
-
-            @include width-up-to($phone-max) {
-                font-size: 4.8rem;
+            @include wider-than($phone-max) {
+                @include set-font(hero-h1);
             }
         }
 
@@ -215,9 +213,10 @@
             }
 
             h3 {
+                @include set-font(h2);
+
                 color: os-color(gold);
-                font-size: 3rem;
-                margin-bottom: 0.5rem;
+                margin-bottom: 0.3rem;
             }
 
             .btn {
@@ -261,8 +260,7 @@
         }
 
         h2 {
-            font-size: 2.1rem;
-            line-height: 1.6;
+            @include set-font(h3);
         }
 
         .boxed {
